# djangocms-style

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  addon.json  aldryn_config.py  conftest.py  pyproject.toml  schemamigration.py  setup.py  tox.ini
.github/workflows/: lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_style/: __init__.py  cms_plugins.py  models.py
djangocms_style/locale/af/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/ar/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/be/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/bg/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/ca/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/cmn/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/cs/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/da/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/el/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/es_AR/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/es_BO/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/et/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/eu/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/fa/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/fi/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/ga/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/gl/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/gu/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/he/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/hi/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/hr/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/hu/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/id/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/is/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/is_IS/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/it/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/ja/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/kk/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/km/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/ko/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/ku_IQ/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/lt/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/mn/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/mn_MN/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/mt/LC_MESSAGES/: django.mo  django.po
djangocms_style/locale/nb/LC_MESSAGES/: django.mo  django.po
djangocms_style/migrations/: 0001_initial.py  0002_set_related_name_for_cmsplugin_ptr.py  0003_adapted_fields.py  0004_plugin_rename.py  0004_use_positive_small_integer_field.py  0005_plugin_table_rename.py  0005_reset_null_values.py  0006_removed_null_fields.py  0007_style_template.py  0008_alter_style_cmsplugin_ptr.py
djangocms_style/migrations_django/: 0001_initial.py
djangocms_style/templates/djangocms_style/: style.html
tests/: settings.py  test_migrations.py  test_models.py  test_plugins.py
tests/requirements/: base.txt  compile.py  dj42_cms311.txt  py310-django32-cms310.txt  py310-django32-cms38.txt  py310-django32-cms39.txt  py310-django42-cms311.txt  py310-django42-cms41.txt  py311-django42-cms311.txt  py311-django42-cms41.txt  py38-django32-cms39.txt  py38-django32-cms41.txt  py39-django32-cms310.txt  py39-django32-cms38.txt  py39-django32-cms39.txt  py39-django32-cms41.txt  requirements.in
(+52 files in other folders)
