[project]
name="djangocms-style"
version="3.1.0"
author="Divio AG"
author_email="info@divio.ch"
maintainer="Django CMS Association and contributors"
maintainer_email="info@django-cms.org"
url="https://github.com/django-cms/djangocms-style"

[tool.codespell]
skip = '*.po'

[tool.ruff]
line-length = 119
lint.select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "FBT",  # flake8-boolean-trap
  "B",    # flake8-bugbear
  "C",    # flake8-comprehensions
  "DJ",   # flake8-django
  "INT",  # flake8-gettext
  "PIE",  # flake8-pie
  "Q",    # flake8-quotes
  "SIM",  # flake8-simplify
  "PGH",  # pygrep-hooks
  "PLE",  # pylint error
  "PLR",  # pylint refactor
  "PLW",  # pylint warning
  "UP",   # pyupgrade
  "C901", # mccabe
  "N",    # pep8-naming
  "YTT",  # flake8-2020
  "RUF"
]
lint.exclude = [
    ".env",
    ".venv",
    "**/migrations/**",
]
lint.ignore = [
    "E501",  # line too long
    "F403",  # 'from module import *' used; unable to detect undefined names
    "E701",  # multiple statements on one line (colon)
    "F401",  # module imported but unused
]
[tool.ruff.lint.per-file-ignores]
"setup.py" = [
  "SIM115"  # Use context handler for opening files
]
